<resources>
    <string name="splash_download_stations">Downloading Station List</string>
    <string name="splash_parsing_stations">Parsing Station List</string>
    <string name="splash_done">Download and parse completed</string>
    <string name="splash_done_local">Not Connected, using local Station List</string>
    <string name="splash_error">Failed to download Station List, trying again! Attempt: </string>
    <string name="splash_error_local">Failed to download Station List. Using local version</string>

    <string name="app_name">BartAlarm</string>
    <string name="from_station">From Station:</string>
    <string name="to_station">To Station:</string>
    <string name="choose_route_button_text">Choose Route</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="download_schedule">Download Schedule</string>
    <string name="manually_set_alarm">Set Times Manually</string>

    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="set_alarm_times">Set Times</string>

    <string-array name="bart_stations">
        <!--<item>"12th St. Oakland City Center"</item>-->
        <item>"16th St. Mission (SF)"</item>
        <item>"19th St. Oakland"</item>
        <item>"24th St. Mission (SF)"</item>
        <item>"Ashby (Berkeley)"</item>
        <item>"Balboa Park (SF)"</item>
        <item>"Bay Fair (San Leandro)"</item>
        <item>"Castro Valley"</item>
        <item>"Civic Center / UN Plaza"</item>
        <item>"Coliseum"</item>
        <item>"Colma"</item>
        <item>"Concord"</item>
        <item>"Daly City"</item>
        <item>"Downtown Berkeley"</item>
        <item>"Dublin / Pleasanton"</item>
        <item>"El Cerrito del Norte"</item>
        <item>"El Cerrito Plaza"</item>
        <item>"Embarcadero (SF)"</item>
        <item>"Fremont"</item>
        <item>"Fruitvale (Oakland)"</item>
        <item>"Glen Park (SF)"</item>
        <item>"Hayward"</item>
        <item>"Lafayette"</item>
        <item>"Lake Merritt (Oakland)"</item>
        <item>"MacArthur (Oakland)"</item>
        <item>"Millbrae"</item>
        <item>"Montgomery St. (SF)"</item>
        <item>"North Berkeley"</item>
        <item>"North Concord / Martinez"</item>
        <item>"Oakland Int'l Airport"</item>
        <item>"Orinda"</item>
        <item>"Pittsburg / Bay Point"</item>
        <item>"Pleasant Hill / Contra Costa Centre"</item>
        <item>"Powell St. (SF)"</item>
        <item>"Richmond"</item>
        <item>"Rockridge (Oakland)"</item>
        <item>"San Bruno"</item>
        <item>"San Francisco Int'l Airport"</item>
        <item>"San Leandro"</item>
        <item>"South Hayward"</item>
        <item>"South San Francisco"</item>
        <item>"Union City"</item>
        <item>"Walnut Creek"</item>
        <item>"West Dublin / Pleasanton"</item>
        <item>"West Oakland"</item>
    </string-array>
</resources>
