<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.forsakendragon.android.bartalarm.ChooseRouteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_station"
        android:layout_margin="15dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/fromStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/bart_stations"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_station"
        android:layout_margin="15dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/toStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/bart_stations"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/chooseRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_route_button_text"/>

    <Button
        android:id="@+id/cancelAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Cancel Alarm"/>

</LinearLayout>